case-study-page.css
body {padding:0;}
.case-study, .presentation {padding-bottom:50px;}
.case-study > nav, .case-study > footer {border:none!important;box-shadow:none!important;padding:10px!important;}
@media (min-width:670px){
	.case-study, .presentation {margin:0 auto;padding-bottom:unset;}
	.case-study > nav, .case-study > footer {margin:unset;}
}

.case-study > nav {margin:20px 0 50px;}
.case-study > footer {margin:50px 0 20px;text-align:center;}
/* CASE STUDY - GENERAL STYLES */
.case-study > * {background-color:var(--bg);padding:5%;margin:0 auto;}
.case-study > *:not(header) {padding:3% 5% 5%;border-color:#e2e2e2}
.case-study > :last-child {margin-bottom:0;}
.case-study header {color:white;background-color:#40a0fc;position:relative;}
.case-study header > * {position:relative;z-index:10;}
.case-study header img {max-width:140px;}
.case-study header h1 {font-size:2.2rem;margin-top:4.5rem;margin-bottom:.5rem;}
.case-study header p {border-bottom:1px solid white;padding-bottom:1.2rem;font-size:1.4rem;margin-top:.5rem;}
.case-study header time {font-size:1.2rem;display:block;margin-bottom:1.2rem;}
.case-study header + .overview {margin-top:-2rem;position:relative;}
.case-study h2 {color:#0082FC;font-size:1.8em;border-bottom:1px solid #0082FC;padding-bottom:1rem;margin:0 0 1rem;clear:right;}
.case-study h2 ~ p:first-of-type {margin-top:2rem;}
.case-study a {text-decoration:none;cursor:pointer;color:#333;border-bottom:1px dotted #333;}
.case-study .persona {margin:20px 0;padding:6px 0 3px 3%;border-left:6px solid #ced6de;}
.case-study .persona h3 {margin:0;}
.case-study .list-header {margin:0;font-weight:bold;}
.case-study ul, .case-study ol {margin-top:0;}
.case-study .highlight {background-color:#fffdcc;background-clip:padding-box;width:fit-content;position:relative;padding-right:5px;padding-left:3px;}
.case-study .highlight::before, .case-study .highlight::after {position:absolute;content:'';border:12px solid transparent;}
.case-study .highlight::before {border-top-color:#fffdcc;border-right-color:#fffdcc;border-left-width:1px;border-right-width:1px;left:-2px;}
.case-study .highlight::after {border-bottom-color:#fffdcc;border-left-color:#fffdcc;border-left-width:1px;border-right-width:1px;right:-1px;bottom:0;}
.case-study .highlight + .highlight {margin-top:3px;}
.case-study section :last-child, .case-study figure :last-child {margin-bottom:0;}

figure.big-stat {text-align:center;}

/* GALLERY */
.zoom.static {margin:0 auto;max-height:70vh;display:block;border:1px solid #bbb;}
.gallery {text-align:center;margin:15px 0 0;}
.gallery * {cursor:pointer;}
.gallery img {width:30%;margin-right:3%;border:1px solid #cfcfcf;background-color:white;box-shadow:2px 3px 4px -2px rgba(0,0,0,0.2);}
.gallery img:last-of-type {margin:0;}
.gallery span {display:none;}
.gallery + p {margin-top:1rem !important;}
.gallery.expand img.focus {border-color:black;cursor:zoom-out;}
@media (min-width:670px){.gallery img {max-width:28%;margin-right:2%;padding:8px;}}
@media (min-width:850px){
	.gallery {position:relative;width:228px;height:210px;margin:33px -17px 20px 15px;float:right;transform:rotate(2.5deg);transition:all .3s;}
	.gallery::before, .gallery::after {content:'';position:absolute;display:inline-block;z-index:10;top:65px;right:-9px;width:52px;height:15px;border:3px solid #aaa;border-radius:60px 0 0 60px;border-right-width:0;transform:rotate(16deg);box-shadow:inset 2px 2px 3px -1px rgba(0,0,0,0.4), -1px 2px 2px -1px rgba(0,0,0,0.4);transition:all .3s, rotate .45s;transform-origin:100% 50%;}
	.gallery::after {top:70px;right:-25px;width:16px;height:12px;border-width:3px;border-radius:0 30px 30px 0;border-left-width:0;border-bottom-color:transparent;box-shadow:inset -1px 3px 3px -2px rgba(0,0,0,0.4);transition:all .3s, rotate 1s;transform-origin:100% 100%;}
	.gallery + p {margin-top:2rem !important;}
	.gallery img {position:absolute;top:0;left:0;max-width:inherit;width:228px;max-height:190px;margin:0;transition:all .3s, max-width 0ms;}
	.gallery img:nth-of-type(2) {transform:rotate(3deg);top:-6px;}
	.gallery img:nth-of-type(3) {transform:rotate(-3deg);top:5px;left:3px;}
	.gallery:hover img {left:-8px;}
	.gallery:hover img:nth-of-type(2) {transform:rotate(2deg);top:-13px;left:-4px;}
	.gallery:hover img:nth-of-type(3) {transform:rotate(-4deg);top:13px;left:0px;}

	.gallery.expand {transform:rotate(0deg);width:100%;text-align:right;margin:15px 0 0;}
	.gallery.expand + * {clear:right;}
	.gallery.expand + p {margin-top:0 !important;}
	.gallery.expand::before, .gallery.expand::after {top:89px;right:-41px;transform:rotate(76deg);}
	.gallery.expand::after {top:100px;right:-38px;}
	.gallery.expand img {padding:0;top:0;left:494px;transform:rotate(0deg) !important;box-shadow:none;display:inline-block;border:3px solid #efefef;}
	.gallery.expand:hover img {top:0;left:494px;}
	.gallery.expand img.static {left:0;}
	.gallery.expand img:nth-of-type(2).static {left:247px;}
	.gallery.expand img:nth-of-type(3).static {left:494px;}

	.gallery span {position:absolute;display:block;right:0;bottom:-1.7rem;left:35px;color:#888;font-size:.8rem;transform:rotate(-2.5deg);text-align:center;transition:opacity .3s, color 100ms, background-color 100ms;}
	.gallery span.collapse {opacity:0;transform:rotate(0deg);z-index:-1;height:0;top:77px;right:auto;bottom:auto;left:0;display:inline-block;line-height:42px;transform:rotate(-90deg);font-size:.9rem;}
	.gallery:hover span {opacity:0;}
	.gallery.expand span {opacity:0;height:0;}
	.gallery.expand span.collapse {opacity:1;left:-119px;height:auto;width:196px;}
	.gallery.expand span.collapse:hover {color:#000;}
}

@media (min-width:670px){
	.case-study > *, .case-study > *:not(header) {padding:5%;}
	.case-study header {padding:50px 5% 10px;}
	.case-study header br {display:none;}
}
@media (min-width:810px){.case-study {max-width:810px;margin:0 auto;}}
@media (min-width:850px){
	.case-study {width:810px;box-shadow:none;border:none;}
	.case-study > * {box-shadow:0 3px 15px -3px rgba(0,0,0,0.4);border:1px solid transparent;margin-bottom:2rem;min-width:670px;}
	.case-study > *:not(header)::after {content:'';display:block;clear:both;}
	.case-study header::after {content:"Case Study";color:#796c07;position:absolute;top:85px;left:-78px;line-height:2rem;font-size:1.1rem;background-color:#ffe838;transform:rotate(-90deg);z-index:30;padding:0 15px;}
}

@media (prefers-color-scheme:dark){
	.case-study header {background-color:#134b82;}
	.case-study a {color:#3fabff;border-bottom-color:#3fabff;}
	.case-study .highlight {background-color:#5e5a00;}
	.case-study .highlight::before {border-top-color:#5e5a00;border-right-color:#5e5a00;}
	.case-study .highlight::after {border-bottom-color:#5e5a00;border-left-color:#5e5a00;}
}
@media (prefers-color-scheme:dark) and (min-width:850px){
	.case-study > * {box-shadow:0 3px 15px -3px rgba(0,130,252,0.6);;}
	.case-study > *:not(header) {border-color:#304c66;}
}

/* CAN-ZOOM IMAGE */
img.can-zoom {max-width:30%;float:right;margin:1rem 0 10px 20px;transition:max-width .5s, border .3s, margin-left .3s;cursor:zoom-in;border:1px solid white;}
img.can-zoom:hover {border-color:grey;}
img.zoom {max-width:100%;border-width:0;margin-left:0;cursor:zoom-out;}

.case-study > footer a {border:none;vertical-align:middle;display:inline-block;}
.fa-linkedin:hover {color:#3177B0;}
.fa-mailbox:hover {color:#db0029;}
.fa-sms:hover {color:#54B852;}

@media (prefers-color-scheme:dark){
	.case-study > footer a {color:#777;}
}

figure {margin:0;}
picture.full-width source, picture.full-width img {width:100%;margin:0 auto;}

@media (prefers-color-scheme:dark){
	picture.full-width {opacity:.8;}
	picture.full-width:hover, picture.full-width:active, picture.full-width:focus {opacity:1;}
}

/* dismiss case study */
#dismiss {background-color:#36568d;border-radius:60px;color:white;display:inline-block;font-weight:bold;padding:8px 6px;text-align:center;transition:all 250ms;width:36px;position:fixed;right:8px;bottom:8px;}
#dismiss.bottom, #dismiss:hover {border-radius:0;padding:12px 6px;width:calc(100% - 12px);right:0;bottom:0;}
#dismiss:hover {background-color:#5C7BB0;cursor:pointer;}

#dismiss::before {content:'\f00d';display:inline-block;font-family:'Font Awesome 5 Pro';font-size:28px;font-weight:300;line-height:48px;transition:opacity 250ms;position:absolute;top:0;right:0;bottom:0;left:0;}
#dismiss.bottom::before, #dismiss:hover::before {opacity:0;width:0;}

#dismiss span {display:inline-block;line-height:28px;opacity:0;overflow:hidden;transition:width 250ms;white-space:nowrap;width:0;}
#dismiss.bottom span, #dismiss:hover span {width:100%;opacity:1;}

@media (min-width:670px){
	#dismiss {display:none;}
}

/* PRESENTATION STYLES */

.presentation ~ * {display:none;}
.presentation > * {box-shadow:unset;margin-bottom:0;border:unset;}
.presentation header {background-color:var(--header-bg);background-image:radial-gradient(circle,#77777755 4.5%,#9f9f9f00 4.5%,#9f9f9f00 100%);background-size:25px 25px;color:black;padding-top:40px;}
.presentation header p {border-bottom-color:var(--text);}
.presentation header img {max-width:320px;}
.presentation header::after {content:'Presentation';left:-82px;}
.presentation description {display:block;}
.presentation h2 {border-bottom-color:var(--text);}
@media (min-width:670px){
	.presentation {box-shadow:0 3px 15px -3px rgba(0,0,0,0.4);}
	.presentation ~ * {display:block;}
}

